lib/tests/fixtures/compiler/parser/break_in_defined_type.baseline
Error: break_in_defined_type.pp:3:9: break statement cannot be used inside a defined type.
  break
  ^~~~~
