lib/tests/fixtures/compiler/parser/break_in_defined_type.pp
define foo() {
    if true {
        break
    }
}
